fixed z-index issues with info window

--- a/analbum.css
+++ b/analbum.css
@@ -138,7 +138,7 @@
 	padding: 2px 8px;
 	background-color: #242424;
 	border-radius: 4px;
-	z-index: 1;
+	z-index: 10;
 }
 .analbum-info-global:hover {
 	color: #eeeeee;
@@ -449,7 +449,7 @@
 	position: relative;
 	min-height: 30px;
 	align-items: center;
-	z-index: 100;
+	z-index: 5;
 }
 .analbum-control {
 	cursor: pointer;
